# dbt-docs-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: create_manifest_cl.py  create_manifest_cll.py
src/: mcp_server.py
src/dbt_docs_mcp/: constants.py  dbt_processing.py  tools.py  utils.py
